# jeeves-app

./: Dockerfile  README.md  run.sh  setup.sh
app/: audio_api.py  dg_api.py  entry.py  oai_api.py  pyproject.toml  requirements.txt
app/html/: index.html  report.html
app/static/css/: index.css  report.css
app/static/js/: index.js
